--- a/package.json
+++ b/package.json
@@ -28,6 +28,10 @@
     "babel-preset-es2015": "^6.3.13",
     "babel-preset-react": "^6.3.13",
     "babel-preset-stage-0": "^6.3.13",
+    "css-loader": "0.26.0",
+    "node-sass": "3.13.0",
+    "sass-loader": "4.0.2",
+    "style-loader": "0.13.1",
     "webpack": "^1.13.3",
     "webpack-dev-server": "1.16.2"
   }
