--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
   "author": "'Jay <'jaykch@outlook.com'>",
   "license": "MIT",
   "dependencies": {
+    "dangerously-set-inner-html": "2.0.0",
+    "marked": "0.3.6",
     "react": "15.3.2",
     "react-dom": "15.3.2",
     "redux": "3.6.0",
